# timeline

./: .gitignore  .test_credentials.txt  2FA_ANALYSIS.md  ALL_FIXES_APPLIED.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPREHENSIVE_TESTING_REPORT.md  CRITICAL_SECURITY_FIXES.md  DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINDINGS_VISUAL.md  FIXES_APPLIED.md  MIGRATION_GUIDE.md  NEW_AUTH_PLAN.md  PENTEST_FINDINGS.txt  PENTEST_RESULTS.md  QUICK_FIX_GUIDE.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_IMPLEMENTED.md  SECURITY_FIX_2FA.md  SECURITY_FIX_RECOMMENDATIONS.md  SECURITY_PENTEST_REPORT.md  SECURITY_SUMMARY.md  SRP_SECURITY_HARDENING.md  TESTING_METHODOLOGY.md  TEST_RESULTS.md  copilot_prompt.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  admin_credentials.txt
backend/src/: auth.rs  crypto.rs  main.rs  models.rs  srp.rs  tls.rs  twofa.rs
backend/static/: PDF_EXPORT_README.md  app.js  crypto.js  index.html  jspdf.min.js  srp.js  style.css  test.html
database/: init.sql  migrate_to_srp.sql
