[package]
name = "timeline-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"
srp = "0.7"
num-bigint = "0.4"
hex = "0.4"
cookie = "0.18"
env_logger = "0.11"
log = "0.4"
regex = "1.10"
totp-lite = "2.0"
sha1 = "0.10"
urlencoding = "2.1"
axum-server = { version = "0.6", features = ["tls-rustls"] }
rcgen = "0.12"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }